# HNEU-NewsViewer-Qt

./: News_spider.py  湖南工程学院校园动态.csv
HNEU-Viewer/: CMakeLists.txt  main.cpp  mywidget.cpp  mywidget.h  mywidget.ui  spiderworker.cpp  spiderworker.h
